syntax = "proto3";
package zetachain.zetacore.lightclient;

import "gogoproto/gogo.proto";
import "zetachain/zetacore/lightclient/block_header_verification.proto";
import "zetachain/zetacore/lightclient/chain_state.proto";
import "zetachain/zetacore/pkg/proofs/proofs.proto";

option go_package = "github.com/zeta-chain/node/x/lightclient/types";

// GenesisState defines the lightclient module's genesis state.
message GenesisState {
  repeated pkg.proofs.BlockHeader block_headers = 1
      [ (gogoproto.nullable) = false ];
  repeated ChainState chain_states = 2 [ (gogoproto.nullable) = false ];
  BlockHeaderVerification block_header_verification = 3
      [ (gogoproto.nullable) = false ];
}
